--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "next": "14.0.4",
+    "nextjs-google-analytics": "^2.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-social-icons": "^6.7.0"
